2007-05-17  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm, SelfUpdate/rsync.pm: only clear old metadata when
	changing update methods

2007-05-17  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Handle whitespace and comments in Shlibs field

2007-05-17  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Support conditionals for Shlibs lines via new
	get_shlibs_field accessor
	* Engine.pm: Use new Shlibs accessor for dumpinfo

2007-05-16  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Catch non-binaries listed in Shlibs; refactor
	nested if() so most-likely-to-fail is outer; streamline handling
	of Shlibs; flag libfoo.dylib in package with Shlibs:libfoo.1.dylib

2007-05-15  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Cache DEBIAN/shlibs contents, don't use otool if
	it doesn't exist

2006-04-30  Christian Schaffner  <chris01@users.sourceforge.net>

	* Engine.pm: Don't try to validate dummy packages without info file.
	
2007-04-20  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: pull stat($otool) out of a loop

2007-04-20  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Validation.pm: validate the Shlibs field for consistency

2007-04-18  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: add the info file to the debian control.

2007-04-17  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Standardize terminology as selfupdate "method".

2007-04-13  Dave Morrison  <drm@finkproject.org>

	* VirtPackage.pm: Parse a greater variety of Version strings from the 
	X server.

2007-04-13  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Standardize terminology as selfupdate "method";
	add selfupdate --list-methods flag.

2007-04-12  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, SelfUpdate.pm: 'fink plugins' does SU->list_plugins,
	which lists the status of all SU::* method classes.
	* SelfUpdate/*: add $VERSION package variable.