@@ -1,3 +1,7 @@
+2007-05-30  Daniel Macks  <dmacks@netspace.org>
+
+	* Engine.pm, PkgVersion.pm: Support conditionals for ConfFiles
+
 2007-05-17  Daniel Macks  <dmacks@netspace.org>
 
 	* SelfUpdate.pm, SelfUpdate/rsync.pm: only clear old metadata when
